acvus-mir-test/tests/snapshots/all__e2e__sroa_field_read_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @obj
     1 |   assign @obj = r0
     2 |   r1 = take @obj.val
     4 |   r2 = r1 + 1 (r3)
     5 |   r4 = take @obj
     6 |   commit @obj = r4
     7 |   return r2

    ; r0 (@obj) : {val: i64}
    ; r1 (@obj.val) : i64
    ; r2 (v5) : i64
    ; r3 (v4) : i64
    ; r4 (v6) : {val: i64}
    ; r5 (@obj) : {val: i64}
