acvus-mir-test/tests/snapshots/all__e2e__sroa_field_read_in_lambda.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @users
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   r9 = call #1(r8)
    12 |   r10 = const_str T1
    13 |   r11 = call #4(r10)
    14 |   r12 = call #5(r9, r11)
    15 |   r13 = string_concat [T0, T0, r12]
    16 |   commit @users = r4
    17 |   return r13

    ; r0 (v20) : Vec<{name: String}>
    ; r1 (v21) : Vec<{name: String}>
    ; r2 (@users) : Vec<{name: String}>
    ; r3 (v6) : Array<{name: String}, 0>
    ; r4 (vec(...)) : Vec<{name: String}>
    ; r5 (into_iter(...)) : Iterator<{name: String}, Pure>
    ; r6 (v11) : Fn({name: String}) -> String
    ; r7 (map(...)) : Iterator<String, Pure>
    ; r8 (collect(...)) : Vec<String>
    ; r9 (v14) : Iterator<String, Pure>
    ; r10 (v15) : &str
    ; r11 (to_string(...)) : String
    ; r12 (join(...)) : String
    ; r13 (v18) : String
    ; r14 (@users) : Vec<{name: String}>
    ; r15 (users) : Vec<{name: String}>
    ; r16 (@users) : Vec<{name: String}>
    ; r17 (v5) : String
    ; r18 (users) : Vec<{name: String}>
    ; r19 (v8) : String
    ; r20 (v19) : Vec<{name: String}>

=== closure L0 (ValueId(0)) ===
     0 |   assign u = r0
     1 |   r1 = take u.name
     2 |   return r1

    ; r0 (v1) : {name: String}
    ; r1 (u.name) : String
    ; r2 (u) : {name: String}
