acvus-mir-test/tests/snapshots/all__e2e__sroa_multiple_field_reads_same_object.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @obj
     1 |   assign @obj = r0
     2 |   r1 = take @obj.x
     3 |   r2 = take @obj.y
     4 |   r3 = r1 + r2
     5 |   r4 = take @obj
     6 |   commit @obj = r4 (not written)
     7 |   return r3

    ; r0 (@obj) : {x: i64, y: i64}
    ; r1 (@obj.x) : i64
    ; r2 (@obj.y) : i64
    ; r3 (v5) : i64
    ; r4 (v6) : {x: i64, y: i64}
    ; r5 (@obj) : {x: i64, y: i64}
