acvus-mir-test/tests/snapshots/all__e2e__ssa_multiple_contexts_independent.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @a
     3 |   r3 = fetch @b
     5 |   r4 = r2 + 1 (r5)
     7 |   r6 = r3 + 2 (r7)
     8 |   r8 = r4 + r6
     9 |   commit @a = r4
    10 |   commit @b = r6
    11 |   return r8

    ; r0 (v16) : i64
    ; r1 (v17) : i64
    ; r2 (@a) : i64
    ; r3 (@b) : i64
    ; r4 (v7) : i64
    ; r5 (v6) : i64
    ; r6 (v10) : i64
    ; r7 (v9) : i64
    ; r8 (v13) : i64
    ; r9 (@b) : i64
    ; r10 (@a) : i64
    ; r11 (v14) : i64
    ; r12 (@a) : i64
    ; r13 (@b) : i64
    ; r14 (v15) : i64
    ; r15 (@a) : i64
    ; r16 (@b) : i64
