acvus-mir-test/tests/snapshots/all__e2e__string_concat.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = fetch @hello
     1 |   assign @hello = r0
     2 |   r1 = fetch @world
     3 |   assign @world = r1
     5 |   assign <template> = T0
     6 |   r2 = ref &@hello
     7 |   r3 = as_slice &r2
     8 |   r4 = ref &@world
     9 |   r5 = as_slice &r4
    10 |   r6 = call #0(r3, r5)
    11 |   r7 = ref &mut <template>
    12 |   append r7 r6
    13 |   r8 = take <template>
    14 |   r9 = take @hello
    15 |   commit @hello = r9 (not written)
    16 |   r10 = take @world
    17 |   commit @world = r10 (not written)
    18 |   return r8

    ; r0 (@hello) : String
    ; r1 (@world) : String
    ; r2 (@hello.) : &String
    ; r3 (v8) : &str
    ; r4 (@world.) : &String
    ; r5 (v10) : &str
    ; r6 (concat(...)) : String
    ; r7 (<template>.) : &mut String
    ; r8 (v13) : String
    ; r9 (v14) : String
    ; r10 (v15) : String
    ; r11 (@world) : String
    ; r12 (<template>) : String
    ; r13 (@hello) : String
    ; r14 (v5) : String
