acvus-mir-test/tests/snapshots/all__e2e__string_equality_in_filter.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","
  T2 = "admin"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @names
     5 |   assign <template> = T0
     6 |   r4 = array_begin capacity=3
     7 |   r5 = const_str T0
     8 |   r6 = call #0(r5)
     9 |   r7 = array_push r4 r6
    10 |   r8 = const_str T0
    11 |   r9 = call #0(r8)
    12 |   r10 = array_push r7 r9
    13 |   r11 = const_str T0
    14 |   r12 = call #0(r11)
    15 |   r13 = array_push r10 r12
    16 |   r14 = call #1(r3)
    17 |   r15 = closure L0 []
    18 |   r16 = call #2(r14, r15)
    19 |   r17 = const_str T1
    20 |   r18 = call #0(r17)
    21 |   r19 = call #3(r16, r18)
    22 |   r20 = ref &mut <template>
    23 |   append r20 r19
    24 |   r21 = take <template>
    25 |   commit @names = r13
    26 |   return r21

    ; r0 (v29) : Array<String, 3>
    ; r1 (v30) : Array<String, 3>
    ; r2 (v31) : Filter<Items<String>, String, Pure>
    ; r3 (@names) : Array<String, 3>
    ; r4 (v7) : Array<String, 0>
    ; r5 (v8) : &str
    ; r6 (to_string(...)) : String
    ; r7 (v10) : Array<String, 1>
    ; r8 (v11) : &str
    ; r9 (to_string(...)) : String
    ; r10 (v13) : Array<String, 2>
    ; r11 (v14) : &str
    ; r12 (to_string(...)) : String
    ; r13 (v16) : Array<String, 3>
    ; r14 (into_iter(...)) : Items<String>
    ; r15 (v19) : Fn(&String) -> Bool
    ; r16 (filter(...)) : Filter<Items<String>, String, Pure>
    ; r17 (v23) : &str
    ; r18 (to_string(...)) : String
    ; r19 (join(...)) : String
    ; r20 (<template>.) : &mut String
    ; r21 (v27) : String
    ; r22 (v3) : String
    ; r23 (x) : Filter<Items<String>, String, Pure>
    ; r24 (names) : Array<String, 3>
    ; r25 (v28) : Array<String, 3>
    ; r26 (names) : Array<String, 3>
    ; r27 (@names) : Array<String, 3>
    ; r28 (x) : Filter<Items<String>, String, Pure>
    ; r29 (@names) : Array<String, 3>
    ; r30 (<template>) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = const_str T2
     2 |   r2 = call #0(r1)
     3 |   assign v6 = r2
     4 |   r3 = ref &v6
     5 |   r4 = string_eq r5 r3
     6 |   r6 = !r4
     7 |   return r6

    ; r0 (v10) : &String
    ; r1 (v4) : &str
    ; r2 (to_string(...)) : String
    ; r3 (var_6.) : &String
    ; r4 (v9) : Bool
    ; r5 (v1) : &String
    ; r6 (v8) : Bool
    ; r7 (n) : &String
    ; r8 (v6) : String
    ; r9 (n) : &String
