acvus-mir-test/tests/snapshots/all__e2e__to_float_conversion.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @n
     3 |   assign <template> = T0
     4 |   r2 = r1 as f64
     5 |   assign x = r2
     6 |   r3 = ref &x
     7 |   r4 = call #0(r3)
     8 |   r5 = ref &mut <template>
     9 |   append r5 r4
    10 |   r6 = take <template>
    11 |   commit @n = r1
    12 |   return r6

    ; r0 (v13) : i64
    ; r1 (@n) : i64
    ; r2 (v6) : Float
    ; r3 (x.) : &Float
    ; r4 (to_string(...)) : String
    ; r5 (<template>.) : &mut String
    ; r6 (v11) : String
    ; r7 (x) : Float
    ; r8 (v3) : String
    ; r9 (@n) : i64
    ; r10 (@n) : i64
    ; r11 (v12) : i64
    ; r12 (<template>) : String
