acvus-mir-test/tests/snapshots/all__e2e__triple_pipe_chain.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   assign <template> = T0
     5 |   r3 = list []
     6 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = closure L1 []
    11 |   r9 = call #3(r7, r8)
    12 |   r10 = closure L2 []
    13 |   r11 = call #3(r9, r10)
    14 |   r12 = call #4(r11)
    15 |   assign x = r12
    16 |   r13 = ref &x
    17 |   r14 = call #5(r13)
    18 |   assign out = r14
    19 |   r15 = ref &out
    20 |   r16 = call #6(r15)
    21 |   r17 = ref &mut <template>
    22 |   append r17 r16
    23 |   r18 = take <template>
    24 |   commit @items = r4
    25 |   return r18

    ; r0 (v27) : Vec<i64>
    ; r1 (v28) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v7) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (into_iter(...)) : Items<i64>
    ; r6 (v11) : Fn(&i64) -> Bool
    ; r7 (filter(...)) : Filter<Items<i64>, i64, Pure>
    ; r8 (v13) : Fn(i64) -> i64
    ; r9 (map(...)) : Map<Filter<Items<i64>, i64, Pure>, i64, i64, Pure>
    ; r10 (v15) : Fn(i64) -> i64
    ; r11 (map(...)) : Map<Map<Filter<Items<i64>, i64, Pure>, i64, i64, Pure>, i64, i64, Pure>
    ; r12 (collect(...)) : Vec<i64>
    ; r13 (x.) : &Vec<i64>
    ; r14 (len(...)) : u64
    ; r15 (out.) : &u64
    ; r16 (to_string(...)) : String
    ; r17 (<template>.) : &mut String
    ; r18 (v25) : String
    ; r19 (v3) : String
    ; r20 (items) : Vec<i64>
    ; r21 (v26) : Vec<i64>
    ; r22 (x) : Vec<i64>
    ; r23 (out) : u64
    ; r24 (items) : Vec<i64>
    ; r25 (@items) : Vec<i64>
    ; r26 (<template>) : String
    ; r27 (@items) : Vec<i64>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 != 0 (r4)
     4 |   return r3

    ; r0 (v7) : &i64
    ; r1 (v4) : i64
    ; r2 (v1) : &i64
    ; r3 (v6) : Bool
    ; r4 (v5) : i64
    ; r5 (i) : &i64
    ; r6 (i) : &i64

=== closure L1 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 + 1 (r3)
     3 |   return r1

    ; r0 (v6) : i64
    ; r1 (v5) : i64
    ; r2 (v1) : i64
    ; r3 (v4) : i64
    ; r4 (i) : i64
    ; r5 (i) : i64

=== closure L2 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 * 2 (r3)
     3 |   return r1

    ; r0 (v6) : i64
    ; r1 (v5) : i64
    ; r2 (v1) : i64
    ; r3 (v4) : i64
    ; r4 (i) : i64
    ; r5 (i) : i64
