acvus-mir-test/tests/snapshots/all__e2e__tuple_expression.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "\n"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @a
     4 |   r4 = fetch @b
     6 |   assign <template> = T0
     7 |   r5 = string_clone r4
     8 |   r6 = tuple (r3, r5)
     9 |   assign $source = r6
    10 |   r7 = take $source[0]
    11 |   assign a = r7
    12 |   r8 = take $source[1]
    13 |   r9 = ref &a
    14 |   r10 = call #0(r9)
    15 |   r11 = ref &mut <template>
    16 |   append r11 r10
    17 |   r12 = ref &mut <template>
    18 |   append r12 r8
    19 |   r13 = const_str T1
    20 |   r14 = ref &mut <template>
    21 |   append r14 r13
    23 |   r15 = take <template>
    24 |   commit @a = r3
    25 |   commit @b = r4
    26 |   return r15

    ; r0 (v26) : i64
    ; r1 (v27) : String
    ; r2 (v28) : String
    ; r3 (@a) : i64
    ; r4 (@b) : String
    ; r5 (v29) : String
    ; r6 (v9) : (i64, String)
    ; r7 (a) : i64
    ; r8 (b) : String
    ; r9 (a.) : &i64
    ; r10 (to_string(...)) : String
    ; r11 (<template>.) : &mut String
    ; r12 (<template>.) : &mut String
    ; r13 (v20) : &str
    ; r14 (<template>.) : &mut String
    ; r15 (v23) : String
    ; r16 (@b) : String
    ; r17 (v22) : Unit
    ; r18 (v25) : String
    ; r19 (<template>) : String
    ; r20 (a) : i64
    ; r21 (@b) : String
    ; r22 (b) : String
    ; r23 (@a) : i64
    ; r24 (b) : String
    ; r25 (v24) : i64
    ; r26 (v5) : String
    ; r27 (@a) : i64
    ; r28 ($source) : (i64, String)
